syntax = "proto3";

option csharp_namespace = "Baka.Hipster.Burger.Shared.Protos";

package shared;


import "Protos/common.proto";

service OrderLineProto {
	
	rpc Add (OrderLineRequest) returns (IdMessage);
	rpc Delete (IdMessage) returns (BoolResponse);
	rpc Get (IdMessage) returns (OrderLineResponse);
	rpc GetAll (Empty) returns (OrderLineResponses);
}
